--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/material": "^6.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "firebase": "^10.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
